--- a/vendas.html
+++ b/vendas.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body><h1>pagina de vendas </h1>
+    <p>vendas $5000</p>
     <a href="index.html">voltar  para pagina de vendas</a>
     
 </body>
